# RedTusk

./: .gitignore  README.md  pyproject.toml
deploy/apparmor/: README.md  redtusk-worker
deploy/docker/: .env  .env.example  Dockerfile.api  Dockerfile.cold-worker  Dockerfile.cold-worker-crac  Dockerfile.crac  Dockerfile.crac-worker  Dockerfile.default  Dockerfile.fc-dispatcher  Dockerfile.high-density  Dockerfile.host  RUNTIMES.md  build-vsock-checkpoint.sh  build-vsock-listener.py  docker-compose.firecracker.yml  docker-compose.gvisor.yml  docker-compose.yml  redtusk-compose
deploy/docker/appcds-warmup-corpus/: qr_fixture.chm  qr_fixture.docx  qr_fixture.eml  qr_fixture.html  qr_fixture.ics  qr_fixture.pptx  qr_fixture.rtf  qr_fixture.txt  sample.html  sample.txt  sample.xml
deploy/docker/postgres/: Dockerfile  init-bktree.sql
deploy/firecracker/: README.md  fc-config.json  fc-run.sh  init  init-vsock
deploy/ksm/: README.md  enable-ksm.sh  redtusk-ksm.service
deploy/seccomp/: redtusk.seccomp.json
deploy/upstream-patches/: README.md  kata-runtime-nydus-rootfs.patch  nydus-snapshotter-imageref.patch
deploy/yara/: lnk_ansi_lolbin.yar
docs/: metadata-fields-observed.json  metadata-fields-static-augmented.json  metadata-fields.json  metadata-fields.md  metadata-schema.json
docs/design/: privsep-split-and-jailer.md
docs/plans/: 2026-05-04-docker-default-image.md  2026-05-04-foundation.md  2026-05-04-java-worker.md  2026-05-05-api-ui.md  2026-05-05-dispatcher-pool.md  2026-05-05-high-density.md  2026-05-06-compose-ops.md  2026-05-06-tika4-zxing-native.md
docs/specs/: 2026-05-04-redtusk-design.md
scripts/: deploy-exclude.txt  deploy_to_host.sh  fc_cpu_probe.py  inventory_augment.sh  inventory_combine.py  inventory_runtime.py  inventory_to_jsonschema.py  make_ics_qr.py  setup_firecracker_host.sh  setup_microvm_host.sh  submit_corpus.py  validate_metadata_schema.py  vsock_dispatcher_probe.py
src/redtusk/: __init__.py  _version.py  api.py  blastbox_ingress.py  cli.py  dispatcher.py  engine.py  errors.py  fc_cpu_features.py  limits.py  pool.py  schema.py  translation.py  types.py  worker_runtime.py
src/redtusk/jobs/: __init__.py  base.py  memory.py  retention.py  sql_store.py
src/redtusk/observability/: __init__.py  logging.py  metrics.py
src/redtusk/runtime/: docker_runtime.py
src/redtusk/sandbox/: container.py  vsock_server.py
src/redtusk/static/: app.js  index.html
src/redtusk/static/assets/: app.css  app.js
tests/: conftest.py
tests/docker/: test_image_default.py  test_image_high_density.py
tests/fixtures/: xxe_external_entity.xml
tests/fixtures/unicode_qr/: generate.py
tests/http/: conftest.py  test_blastbox_ingress.py  test_extract_api.py  test_jobs_api.py  test_readyz_metrics.py  test_tika_compat.py
tests/integration/: test_blastbox_roundtrip.py  test_detonator_roundtrip.py  test_no_network_egress.py  test_tika_compat_pipeline.py  test_warm_path.py
tests/unit/: test_cap_dropper_security.py  test_cli_serve_host.py  test_compose_reserved_keys.py  test_dispatcher.py  test_docker_runtime.py  test_egress_detector.py  test_engine_contract_safety.py  test_engine_crac_path.py  test_engine_envelope.py  test_errors.py  test_fc_cpu_features.py  test_fc_cpu_probe_cli.py  test_jobs_memory.py  test_jobs_protocol.py  test_jobs_sql_postgres.py  test_jobs_sql_sqlite.py  test_limits.py  test_observability_logging.py  test_observability_metrics.py  test_path_and_retention_hardening.py  test_pool.py  test_retention.py  test_sandbox_container.py  test_schema_validation.py  test_static_ui.py  test_types_extract_result.py  test_types_job_record.py  test_types_values.py  test_vsock_server.py  test_worker_runtime.py
worker_jvm/: pom.xml
worker_jvm/native/: Makefile  cap_dropper.c  ksm_helper.c
worker_jvm/src/main/java/io/redtusk/worker/: CapDropper.java  DraftSnapshotWriter.java  DraftingRecursiveHandler.java  EmbeddedFileExtractor.java  EntryResult.java  FifoLoop.java  FileIpcChannel.java  IpcChannel.java  IpcChannelFactory.java  JobDescriptor.java  KsmHelper.java  Main.java  ParseResult.java  ParserRunner.java  Pass1ImageCapture.java  RmetaWriter.java  RtfIocScanner.java  VsockIpcChannel.java
worker_jvm/src/main/java/io/redtusk/worker/util/: SafeXml.java
worker_jvm/src/test/java/io/redtusk/worker/: EntryResultTest.java  FifoLoopTest.java  IpcChannelTest.java  JobDescriptorTest.java  MainIntegrationTest.java  ParserRunnerTest.java  RmetaWriterTest.java  VsockIpcChannelTest.java
worker_jvm/src/test/resources/: sample.html  sample.txt
