[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redtusk"
version = "0.1.0"
description = "Sandboxed Apache Tika service with warm-pool worker containers"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.111",
    "uvicorn[standard]>=0.29",
    "click>=8.1",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "psycopg[binary,pool]>=3.2.0",
    "aiosqlite>=0.20.0",
    "jsonschema>=4.21.0",
    "rfc3339-validator>=0.1.4",
    "python-magic>=0.4.27",
    "pyzipper>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
redtusk = "redtusk.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
markers = [
    "integration: requires running RedTusk + Tika instances (deselect with -m 'not integration')",
    "docker: requires Docker daemon and pre-built images (deselect with -m 'not docker')",
    "postgres: requires a running postgres instance",
    "jvm: requires JDK + maven",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
