[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redtusk"
version = "0.1.0"
description = "Sandboxed Apache Tika service with warm-pool worker containers"
license = {text = "MIT"}
requires-python = ">=3.12"
# NOTE (supply chain): these constraints bound the resolver but are NOT a
# substitute for a hash-pinned lockfile. For reproducible, tamper-evident
# installs generate a locked, hashed manifest and install from it in the
# Docker images, e.g.:
#   uv lock                                         # -> uv.lock (preferred)
#   pip-compile --generate-hashes -o deploy/requirements.lock pyproject.toml
# then `pip install --require-hashes -r deploy/requirements.lock`.
# A `deploy/requirements.lock` produced via `pip freeze` is committed as a
# starting point; regenerate it WITH HASHES (pip-tools/uv) for production.
# Upper bounds cap the next major (or next minor for 0.x) to avoid silently
# pulling in breaking releases; the runtime dependency SET is unchanged.
# RedTusk now runs ON blastbox.host: it ships only the engine adapter
# (redtusk.engine), the ingress extension (redtusk.blastbox_ingress), a lean CLI,
# and structured logging. The bespoke FastAPI/dispatcher/jobs/pool host stack was
# deleted — its deps moved out. Core stays light so the cold worker can install
# it `--no-deps` on top of blastbox core (it imports only redtusk.engine).
dependencies = [
    "blastbox>=0.1.15,<0.2",
    "click>=8.1,<9.0",
    "structlog>=24.1.0,<26.0",
    "jsonschema>=4.0,<5.0",
]

[project.optional-dependencies]
# The api/dispatcher tier runs `blastbox serve` / `blastbox dispatch` and loads
# the ingress extension (which imports fastapi) — all provided by blastbox[host].
host = [
    "blastbox[host]>=0.1.15,<0.2",
]
dev = [
    "blastbox[host]>=0.1.15,<0.2",
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "ruff>=0.3.0,<1.0",
    "mypy>=1.9.0,<2.0",
]

[project.scripts]
redtusk = "redtusk.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

# Package the web UI assets (index.html + the assets/ subdir the blastbox
# StaticUI seam serves at GET / and /assets). Without this, pip install copies
# only the .py modules and the UI silently 404s (make_extension() sees no
# index.html → static_ui=None).
[tool.setuptools.package-data]
redtusk = ["static/index.html", "static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
markers = [
    "integration: requires running RedTusk + Tika instances (deselect with -m 'not integration')",
    "docker: requires Docker daemon and pre-built images (deselect with -m 'not docker')",
    "postgres: requires a running postgres instance",
    "jvm: requires JDK + maven",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
